kustomize/Overlay/dev/ingress-change-dns.yml
#cause / weatherapp.local in default namespace and both on same cluster and ingress is share between them so must change this in each namespace
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-ingress

spec:
  ingressClassName: nginx # we install this when create cluster
  tls:
    - hosts:
        - "weatherapp.local.dev.com"
      secretName: tls-secret 
  rules:
    - host: "weatherapp.local.dev.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 3000
